--- a/Progres Awal/about.html
+++ b/Progres Awal/about.html
@@ -1,72 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
-    <link rel="stylesheet" href="about.css">
-</head>
-<body>
-    <header class="header">
+    <link rel="stylesheet" href="about.css" />
+  </head>
+  <body>
+    <header class="hero">
+      <nav>
         <div class="logo">
-            <img src="image/logo.png" alt="Getyourtrip.com">
+          <img src="image/logo.png" alt="Jalanin" />
         </div>
-        <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Information</a>
-            <a href="#">About</a>
-        </nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="informasi.html">Information</a></li>
+          <li><a href="#/">About</a></li>
+        </ul>
+        <div class="lang-login">
+          <div class="lang">
+            <img src="image/indonesia.jpg" alt="ID" />
+          </div>
+          <button class="login-btn">Masuk</button>
+        </div>
+      </nav>
     </header>
     <main class="main-content">
-        <section class="team-section">
-            <h2>Tim Captone Jalanin</h2>
-            <div class="team-member">
-                <img src="image/pria.png" alt="Member 1">
-                <h3>Member 1</h3>
-                <button onclick="window.location.href='https://www.linkedin.com'">LinkedIn</button>
-            </div>
-            <div class="team-member">
-                <img src="image/wanita.png" alt="Member 2">
-                <h3>Member 2</h3>
-                <button onclick="window.location.href='https://www.linkedin.com'">LinkedIn</button>
-            </div>
-            <div class="team-member">
-                <img src="image/pria.png" alt="Member 3">
-                <h3>Member 3</h3>
-                <button onclick="window.location.href='https://www.linkedin.com'">LinkedIn</button>
-            </div>
-        </section>
+      <section class="team-section">
+        <h2>Tim Captone 3</h2>
+        <div class="team-member">
+          <img src="image/pria.png" alt="Member 1" />
+          <h3>Member 1</h3>
+          <p>Role: Developer</p>
+        </div>
+        <div class="team-member">
+          <img src="image/wanita.png" alt="Member 2" />
+          <h3>Member 2</h3>
+          <p>Role: Designer</p>
+        </div>
+        <div class="team-member">
+          <img src="image/pria.png" alt="Member 3" />
+          <h3>Member 3</h3>
+          <p>Role: Project Manager</p>
+        </div>
+      </section>
     </main>
-    <footer>
-        <div class="footer-content">
-            <div class="footer-left">
-                <h2>Jalan In</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu cursus erat. In hac habitasse platea dictumst. Aenean a lectus erat. Suspendisse potenti. Nullam</p>
-            </div>
-            <div class="footer-links">
-                <h2>Laman</h2>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Information</a></li>
-                    <li><a href="#">Events</a></li>
-                </ul>
-            </div>
-            <div class="footer-social">
-                <h2>Social Media</h2>
-                <ul>
-                    <li><a href="#"><img src="image/instagram.png" alt="Facebook"></a></li>
-                    <li><a href="#"><img src="image/facebook.png" alt="Twitter"></a></li>
-                    <li><a href="#"><img src="image/youtube.png" alt="Instagram"></a></li>
-                </ul>
-                <form class="subscribe-form">
-                    <input type="email" placeholder="Enter email address">
-                    <button type="submit">Send</button>
-                </form>
-            </div>
+    <footer class="footer">
+      <div class="footer-content">
+        <div class="logo">
+          <img src="image/logo.png" alt="Getyourtrip.com" />
         </div>
-        <div class="footer-bottom">
-            <p>© 2023 Jalan In All Rights reserved</p>
+        <div class="footer-section">
+          <h3>Layanan</h3>
+          <p>Saran Destinasi</p>
+          <p>Hubungi Kami</p>
         </div>
+        <div class="footer-section">
+          <h3>Dukungan</h3>
+          <p>Tentang Jalanin</p>
+          <p>Ketentuan & Kebijakan Privasi</p>
+        </div>
+        <div class="footer-section">
+          <h3>Ikuti Kami Di</h3>
+          <p>Instagram</p>
+          <p>Facebook</p>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
